public/style.css
/* ... */
.h-400px{
    height: 400px;
}

/*size classes*/
.s-100px{
    width: 100px;
    height: 150px;
}
.s-200px{
    width: 200px;
    height: 250px;
}
.s-300px{
    width: 300px;
    height: 350px;
}
/*icon size*/
.i-50px{
    width: 50px;
    height: 50px;
}
.i-100px{
    width: 100px;
    height: 100px;
}
.i-200px{
    width: 200px;
    height: 200px;
}
.i-300px{
    width: 300px;
    height: 300px;
}

/* header */
header{
    width: 100%;
    max-width: 100%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    top: 0;
    position: fixed;
    padding: 10px 20px  10px 0px;
    background: var(--colorDefault2);
}
.nav-links, .auth-buttons{
    display: flex;
    align-items: center;
    gap: var(--spacing3);
}
nav {
    display: flex;
    align-items: center;
    gap: var(--spacing5);
    padding: var(--spacing3) var(--spacing4);
    max-width: 100%;
}
nav a{
    color:var(--color2);
}
nav a:hover{
    color: var(--color3);
}
.hamburger{
    display: none;
    width: 40px;
    height: 40px;
    border-radius: 10px;
}
nav.left-nav{
    margin-left: auto !important;
    gap: var(--spacing3);
}
.left-nav:nth-of-type(2){
    margin-left: 0;
}

/*footer*/
footer{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: top;
    background: var(--color2);
    color: var(--background);
    padding: var(--spacing5);
    gap: var(--spacing5);

    .logo{
        color: var(--colorDefault2);
    }
    h3{
        line-height: 50px;
        color: var(--colorDefault2)
    }
}
.footer-left{
    flex: 1.5;
}
.footer-quick-links{
    display: flex;
    flex: 1;
    flex-direction: column;
}
.footer-quick-links ul{
        display: flex;
        flex-direction: column;
        gap: 15px;
        a{
        color: var(--background);
        }
        a:hover{
            color: var(--colorDefault2);
        }
    }
.footer-contact-info{
    flex: 1;
}    
.footer-right{
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: left;
}
.social-media-icons{
    display: flex;
    flex:1;
    gap: 20px;

    *{
        width: 30px;
    }
}
.copyright-text{
    min-width: max-content;
    width: 100%;
}

/*Mini-laptop size*/
@media (max-width: 1100px) {
     header{
        align-items: center;


       
        
        
    }
     .hamburger{
            order: 2;
            margin-left: auto;
        }
        .donate-button{
            margin-left: auto;
            }
            .nav-links, .auth-buttons{
                display: flex;
                flex-direction: column;
                align-items: center;
                gap: var(--spacing3);
            }
            #login-btn, #signup-btn{
                border: 2px solid var(--color2);
                width: 300px;
                text-align: center;
                padding: var(--spacing2) var(--spacing3);
                border-radius: var(--spacing2);
            }
            #signup-btn{
                color: var(--colorDefault2);
                background: var(--color2);
            }
            .spacer{
                flex-grow: 1;
            }
            .donate-container{
                order: 1;
                margin-right: 10px;
            }


    .mobile-size-1{
        width: 100%;
        max-width: 100%;
        height: 100%;}
    .grid, .reverse{
        display: block;
        grid-template-columns: 1fr; /* Single column layout */
        gap: var(--spacing4);
        background: var(--background);
    }
    .grid >*:first-child, .reverse > *:first-child {
        order: 1; /* Keep the first child in the first position */
        margin: var(--spacing4) 0;
    }
    .grid2{
        gap: var(--spacing5);
    }
    .logo{
        font: var(--h3);
    }
    .hamburger{
        display: block;
    }
    nav{
        display: none;


        a:hover{
            color: var(--color1);
        }
    }
    nav.show{
        display: flex;
        flex-direction: column;
        position: absolute;
        width: 100%;
        top: var(--spacing6);
        background: var(--colorDefault2);
        padding: var(--spacing4);
        gap: var(--spacing4);
        border-radius: var(--spacing2);
    }
    .nav.left-nav{
        margin-left: 0;
        flex-direction: column;
        align-items: center;
        gap: var(--spacing3);
    }
    .logo{
        width: 100px;
    }
    .mobile-hide{
        display: none;
        height: 0;
    }
    .mobile-show{
        display: block;
        height: fit-content;
    }
}

/*Tablet and Mobile Styles*/
@media (max-width: 900px){
   
    .flex{
        flex-wrap: wrap;
        flex-grow: 1;
    }
    img{
        max-width: 100%;
    }
    h1{
        font: var(--h2);
    }
    .t-text-only-section{
        max-width: 50%;
    }
    .mobile-center{
        align-items: center;
        text-align: center;
    }
    .icon-style{
        justify-content: left start;
    }
    .icon-style-2{
        padding: var(--zero);
        height: var(--size1);
        width: var(--size1);
    }
    .card-design1{
        width: 300px;
        height: 400px;
        margin: 0 auto;
        height: fit-content;
        padding: var(--spacing3);
        gap: var(--spacing3);
    }
    footer{
        flex-direction: column;
        align-items: center;
        text-align: center;
        .logo{
            margin-left: 0;
        }
    }
    .footer-right{
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }
}

/*Mobile Styles for About Us Page*/
@media (max-width: 900px){
   
}

